--- a/application/src/app/components/consumers/consumer.add.component.html
+++ b/application/src/app/components/consumers/consumer.add.component.html
@@ -4,27 +4,36 @@
             <div class="two column row">
                 <div class="column">
                     <h4 class="ui dividing header">Podstawowe dane</h4>
-                    <div class="field" [ngClass]="{'error': dataAlert}">
-                        <label>Firma <sup>[1]</sup></label>
+                    <div class="field">
+                        <label>Firma</label>
                         <input type="text" name="company" id="company" placeholder="Firma" [(ngModel)]="consumer.company">
                     </div>
                     <div class="field">
                         <div class="two fields">
-                            <div class="field" [ngClass]="{'error': dataAlert}">
-                                <label>Imie <sup>[1]</sup></label>
-                                <input type="text" name="firstName" placeholder="Imie" [(ngModel)]="consumer.firstName">
+                            <div class="field" [ngClass]="{'error': (!firstName.valid && (firstName.dirty || firstName.touched))}">
+                                <label>Imię *</label>
+                                <input type="text" name="firstName" required placeholder="Imie" [(ngModel)]="consumer.firstName" #firstName="ngModel">
+                                <div *ngIf="firstName.errors && (firstName.dirty || firstName.touched)">
+                                    <small [hidden]="!firstName.errors.required">Imię jest wymagane</small>
+                                </div>
                             </div>
-                            <div class="field" [ngClass]="{'error': dataAlert}">
-                                <label>Nazwisko <sup>[1]</sup></label>
-                                <input type="text" name="lastName" placeholder="Nazwisko" [(ngModel)]="consumer.lastName">
+                            <div class="field" [ngClass]="{'error': (!lastName.valid && (lastName.dirty || lastName.touched))}">
+                                <label>Nazwisko *</label>
+                                <input type="text" name="lastName" required placeholder="Nazwisko" [(ngModel)]="consumer.lastName" #lastName="ngModel">
+                                <div *ngIf="lastName.errors && (lastName.dirty || lastName.touched)">
+                                    <small [hidden]="!lastName.errors.required">Nazwisko jest wymagane</small>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="field">
                         <div class="two fields">
-                            <div class="field">
+                            <div class="field" [ngClass]="{'error': (!nip.valid && (nip.dirty || nip.touched))}">
                                 <label>NIP</label>
-                                <input type="text" name="nip" placeholder="NIP" [(ngModel)]="consumer.nip">
+                                <input type="text" name="nip" pattern="^\d{3}-\d{3}-\d{2}-\d{2}|\d{3}-\d{2}-\d{2}-\d{3}$" placeholder="NIP" [(ngModel)]="consumer.nip" #nip="ngModel">
+                                <div *ngIf="nip.errors && (nip.dirty || nip.touched)">
+                                    <small [hidden]="!nip.errors.pattern">Podaj poprawny format nipu</small>
+                                </div>
                             </div>
                             <div class="field">
                                 <label>PESEL</label>
@@ -58,11 +67,11 @@
                                 <small [hidden]="!postalCode.errors.pattern">Podaj poprawny format (00-000)</small>
                             </div>
                         </div>
-                        <div class="eleven wide field" [ngClass]="{'error': (!city.valid && (city.dirty || city.touched))}">
+                        <div class="eleven wide field" [ngClass]="{'error': (!place.valid && (place.dirty || place.touched))}">
                             <label>Miejscowość *</label>
-                            <input type="text" name="city" placeholder="Miejscowość" required [(ngModel)]="consumer.city" #city="ngModel">
-                            <div *ngIf="city.errors && (city.dirty || city.touched)">
-                                <small [hidden]="!city.errors.required">Miejscowość jest wymagana</small>
+                            <input type="text" name="place" placeholder="Miejscowość" required [(ngModel)]="consumer.place" #place="ngModel">
+                            <div *ngIf="place.errors && (place.dirty || place.touched)">
+                                <small [hidden]="!place.errors.required">Miejscowość jest wymagana</small>
                             </div>
                         </div>
                     </div>
@@ -94,13 +103,16 @@
                             <input type="text" name="bank" placeholder="Bank" [(ngModel)]="consumer.bank">
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': (!bankAccount.valid && (bankAccount.dirty || bankAccount.touched))}">
                         <label>Numer konta</label>
                         <div class="ui labeled input">
                             <div class="ui label">
                                 PL
                             </div>
-                            <input type="text" name="bankAccount" pattern="[0-9]{26}" placeholder="Numer konta" [(ngModel)]="consumer.bankAccount">
+                            <input type="text" name="bankAccount" pattern="[0-9]{26}" placeholder="Numer konta" [(ngModel)]="consumer.bankAccount" #bankAccount="ngModel">
+                        </div>
+                        <div *ngIf="bankAccount.errors && (bankAccount.dirty || bankAccount.touched)">
+                            <small [hidden]="!bankAccount.errors.pattern">Podaj poprawny numer konta</small>
                         </div>
                     </div>
                 </div>
@@ -111,18 +123,4 @@
     <button class="ui  green labeled icon button" [ngClass]="{'loading': addLoading}" (click)="add()" [disabled]="!consumerForm.form.valid || addLoading">
         <i class="plus icon"></i> Dodaj
     </button>
-    <br>
-    <br>
-    <small *ngIf="!dataAlert">[1] - Klient musi posiadać imię i nazwisko, lub nazwę firmy</small>
-    <div class="ui negative message" *ngIf="dataAlert">
-        <i class="close icon" (click)="closeDataAlert()"></i>
-        <div class="header">
-            Klient nie mógł zostać dodany
-        </div>
-        <p>Klient musi posiadać przynajmniej jedną z informacji:</p>
-        <ul>
-            <li>Nazwa firmy</li>
-            <li>Imię i nazwisko</li>
-        </ul>
-    </div>
 </div>
