--- a/application/src/app/components/consumers/consumer.data.component.html
+++ b/application/src/app/components/consumers/consumer.data.component.html
@@ -50,70 +50,114 @@
     <b style="font-size:1.07142857rem;">Edycja klienta</b>
     <div class="ui icon button mini right floated" (click)="editMode = false"><i class="remove icon"></i></div>
     <div style="max-height: calc(100vh - 400px); overflow-y:scroll; width: 100%; padding-right: 10px; margin-top: 20px;">
-        <form class="ui form">
+        <form class="ui form" #consumerForm="ngForm">
             <div class="field">
                 <label>Firma</label>
-                <input type="text" name="company" placeholder="Firma" [(ngModel)]="consumerInput.company">
+                <input type="text" name="company" placeholder="Firma" [(ngModel)]="consumerInput
+            .company">
             </div>
-            <div class="field">
-                <label>Imię</label>
-                <input type="text" name="first-name" placeholder="Imię" [(ngModel)]="consumerInput.firstName">
+            <div class="field" [ngClass]="{'error': (!firstName.valid && (firstName.dirty || firstName.touched))}">
+                <label>Imię *</label>
+                <input type="text" name="first-name" required placeholder="Imię" [(ngModel)]="consumerInput
+            .firstName" #firstName="ngModel">
+                <div *ngIf="firstName.errors && (firstName.dirty || firstName.touched)">
+                    <small [hidden]="!firstName.errors.required">Imię jest wymagane</small>
+                </div>
             </div>
-            <div class="field">
-                <label>Nazwisko</label>
-                <input type="text" name="last-name" placeholder="Nazwisko" [(ngModel)]="consumerInput.lastName">
+            <div class="field" [ngClass]="{'error': (!lastName.valid && (lastName.dirty || lastName.touched))}">
+                <label>Nazwisko *</label>
+                <input type="text" name="last-name" required placeholder="Nazwisko" [(ngModel)]="consumerInput
+            .lastName" #lastName="ngModel">
+                <div *ngIf="lastName.errors && (lastName.dirty || lastName.touched)">
+                    <small [hidden]="!lastName.errors.required">Nazwisko jest wymagane</small>
+                </div>
             </div>
-            <div class="field">
+            <div class="field" [ngClass]="{'error': (!nip.valid && (nip.dirty || nip.touched))}">
                 <label>NIP</label>
-                <input type="text" name="nip" placeholder="NIP" [(ngModel)]="consumerInput.nip">
+                <input type="text" name="nip" pattern="^\d{3}-\d{3}-\d{2}-\d{2}|\d{3}-\d{2}-\d{2}-\d{3}$" placeholder="NIP" [(ngModel)]="consumerInput.nip" #nip="ngModel">
+                <div *ngIf="nip.errors && (nip.dirty || nip.touched)">
+                    <small [hidden]="!nip.errors.pattern">Podaj poprawny format nipu</small>
+                </div>
             </div>
             <div class="field">
                 <label>PESEL</label>
-                <input type="text" name="pesel" placeholder="PESEL" [(ngModel)]="consumerInput.pesel">
+                <input type="text" name="pesel" placeholder="PESEL" [(ngModel)]="consumerInput
+            .pesel">
             </div>
-            <div class="field">
-                <label>Telefon</label>
-                <input type="text" name="phone" placeholder="Telefon" [(ngModel)]="consumerInput.phone">
-            </div>
-            <div class="field">
-                <label>Email</label>
-                <input type="text" name="email" placeholder="Email" [(ngModel)]="consumerInput.email">
-            </div>
-            <div class="field">
-                <label>WWW</label>
-                <input type="text" name="www" placeholder="WWW" [(ngModel)]="consumerInput.www">
-            </div>
-            <div class="field">
-                <label>Bank</label>
-                <input type="text" name="bank" placeholder="Bank" [(ngModel)]="consumerInput.bank">
-            </div>
-            <div class="field">
-                <label>Numer konta</label>
-                <input type="text" name="bankAccount" placeholder="Numer konta" [(ngModel)]="consumerInput.bankAccount">
-            </div>
-            <div class="field">
-                <label>Ulica</label>
-                <input type="text" name="street" placeholder="Ulica" [(ngModel)]="consumerInput.street">
+            <div class="field" [ngClass]="{'error': (!street.valid && (street.dirty || street.touched))}">
+                <label>Ulica *</label>
+                <input type="text" name="street" placeholder="Ulica" [(ngModel)]="consumerInput
+            .street" #street="ngModel">
+                <div *ngIf="street.errors && (street.dirty || street.touched)">
+                    <small [hidden]="!street.errors.required">Ulica jest wymagana</small>
+                </div>
             </div>
             <div class="field">
                 <label>Nr budynku</label>
-                <input type="text" name="buildNumber" placeholder="Numer budynku" [(ngModel)]="consumerInput.buildNumber">
+                <input type="text" name="buildNumber" placeholder="Numer budynku" [(ngModel)]="consumerInput
+            .buildNumber">
             </div>
             <div class="field">
                 <label>Numer mieszkania</label>
-                <input type="text" name="apartmentNumber" placeholder="Numer mieszkania" [(ngModel)]="consumerInput.apartmentNumber">
+                <input type="text" name="apartmentNumber" placeholder="Numer mieszkania" [(ngModel)]="consumerInput
+            .apartmentNumber">
+            </div>
+            <div class="field" [ngClass]="{'error': (!postalCode.valid && (postalCode.dirty || postalCode.touched))}">
+                <label>Kod pocztowy *</label>
+                <input type="text" name="postalCode" pattern="[0-9]{2}\-[0-9]{3}" required placeholder="Kod pocztowy" [(ngModel)]="consumerInput
+            .postalCode" #postalCode="ngModel">
+                <div *ngIf="postalCode.errors && (postalCode.dirty || postalCode.touched)">
+                    <small [hidden]="!postalCode.errors.required">Kod pocztowy jest wymagany</small>
+                    <small [hidden]="!postalCode.errors.pattern">Podaj poprawny format (00-000)</small>
+                </div>
+            </div>
+            <div class="field" [ngClass]="{'error': (!place.valid && (place.dirty || place.touched))}">
+                <label>Miejscowość *</label>
+                <input type="text" name="place" placeholder="Miasto" [(ngModel)]="consumerInput
+            .place" required #place="ngModel">
+                <div *ngIf="place.errors && (place.dirty || place.touched)">
+                    <small [hidden]="!place.errors.required">Miejscowość jest wymagana</small>
+                </div>
             </div>
             <div class="field">
-                <label>Kod pocztowy</label>
-                <input type="text" name="postalCode" placeholder="Kod pocztowy" [(ngModel)]="consumerInput.postalCode">
+                <label>Telefon</label>
+                <input type="text" name="phone" placeholder="Telefon" [(ngModel)]="consumerInput
+            .phone">
+            </div>
+            <div class="field" [ngClass]="{'error': (!email.valid && (email.dirty || email.touched))}">
+                <label>Email</label>
+                <input type="text" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="Email" [(ngModel)]="consumerInput
+            .email" #email="ngModel">
+                <div *ngIf="email.errors && (email.dirty || email.touched)">
+                    <small [hidden]="!email.errors.pattern">Podaj poprawny format adresu email</small>
+                </div>
             </div>
             <div class="field">
-                <label>Miasto</label>
-                <input type="text" name="place" placeholder="Miasto" [(ngModel)]="consumerInput.place">
+                <label>WWW</label>
+                <input type="text" name="www" placeholder="WWW" [(ngModel)]="consumerInput
+            .www">
             </div>
-            <div class="ui  green labeled icon button" (click)="save()">
+            <div class="field">
+                <label>Bank</label>
+                <input type="text" name="bank" placeholder="Bank" [(ngModel)]="consumerInput
+            .bank">
+            </div>
+            <div class="field" [ngClass]="{'error': (!bankAccount.valid && (bankAccount.dirty || bankAccount.touched))}">
+                <label>Numer konta</label>
+                <div class="ui labeled input">
+                    <div class="ui label">
+                        PL
+                    </div>
+                    <input type="text" name="bankAccount" pattern="[0-9]{26}" placeholder="Numer konta" [(ngModel)]="consumerInput
+            .bankAccount" #bankAccount="ngModel">
+                </div>
+                <div *ngIf="bankAccount.errors && (bankAccount.dirty || bankAccount.touched)">
+                    <small [hidden]="!bankAccount.errors.pattern">Podaj poprawny numer konta</small>
+                </div>
+            </div>
+            <button class="ui  green labeled icon button" (click)="save()" [disabled]="!consumerForm.form.valid">
                 <i class="save icon"></i> Zapisz
-            </div>
+            </button>
         </form>
     </div>
 </ng-container>
