--- a/application/src/app/components/consumers/consumer.input.component.html
+++ b/application/src/app/components/consumers/consumer.input.component.html
@@ -52,70 +52,100 @@
     <b style="font-size:1.07142857rem;">Nowy klient</b>
     <div class="ui icon button mini right floated" (click)="searchView()"><i class="remove icon"></i></div>
     <div style="max-height: calc(100vh - 400px); overflow-y:scroll; width: 100%; padding-right: 10px; margin-top: 20px;">
-        <form class="ui form">
+        <form class="ui form" #consumerForm="ngForm">
             <div class="field">
                 <label>Firma</label>
-                <input type="text" name="company" placeholder="Firma (niewymagane)" [(ngModel)]="consumerAdd.company">
+                <input type="text" name="company" placeholder="Firma" [(ngModel)]="consumerAdd.company">
             </div>
-            <div class="field">
-                <label>Imię</label>
-                <input type="text" name="first-name" placeholder="Imię" [(ngModel)]="consumerAdd.firstName">
+            <div class="field" [ngClass]="{'error': (!firstName.valid && (firstName.dirty || firstName.touched))}">
+                <label>Imię *</label>
+                <input type="text" name="first-name" required placeholder="Imię" [(ngModel)]="consumerAdd.firstName" #firstName="ngModel">
+                <div *ngIf="firstName.errors && (firstName.dirty || firstName.touched)">
+                    <small [hidden]="!firstName.errors.required">Imię jest wymagane</small>
+                </div>
             </div>
-            <div class="field">
-                <label>Nazwisko</label>
-                <input type="text" name="last-name" placeholder="Nazwisko" [(ngModel)]="consumerAdd.lastName">
+            <div class="field" [ngClass]="{'error': (!lastName.valid && (lastName.dirty || lastName.touched))}">
+                <label>Nazwisko *</label>
+                <input type="text" name="last-name" required placeholder="Nazwisko" [(ngModel)]="consumerAdd.lastName" #lastName="ngModel">
+                <div *ngIf="lastName.errors && (lastName.dirty || lastName.touched)">
+                    <small [hidden]="!lastName.errors.required">Nazwisko jest wymagane</small>
+                </div>
             </div>
-            <div class="field">
+            <div class="field" [ngClass]="{'error': (!nip.valid && (nip.dirty || nip.touched))}">
                 <label>NIP</label>
-                <input type="text" name="nip" placeholder="NIP" [(ngModel)]="consumerAdd.nip">
+                <input type="text" name="nip" pattern="^\d{3}-\d{3}-\d{2}-\d{2}|\d{3}-\d{2}-\d{2}-\d{3}$" placeholder="NIP" [(ngModel)]="consumerAdd.nip" #nip="ngModel">
+                <div *ngIf="nip.errors && (nip.dirty || nip.touched)">
+                    <small [hidden]="!nip.errors.pattern">Podaj poprawny format nipu</small>
+                </div>
             </div>
             <div class="field">
                 <label>PESEL</label>
                 <input type="text" name="pesel" placeholder="PESEL" [(ngModel)]="consumerAdd.pesel">
             </div>
-            <div class="field">
-                <label>Telefon</label>
-                <input type="text" name="phone" placeholder="Telefon (niewymagane)" [(ngModel)]="consumerAdd.phone">
-            </div>
-            <div class="field">
-                <label>Email</label>
-                <input type="text" name="email" placeholder="Email (niewymagane)" [(ngModel)]="consumerAdd.email">
-            </div>
-            <div class="field">
-                <label>WWW</label>
-                <input type="text" name="www" placeholder="WWW (niewymagane)" [(ngModel)]="consumerAdd.www">
-            </div>
-            <div class="field">
-                <label>Bank</label>
-                <input type="text" name="bank" placeholder="Bank (niewymagane)" [(ngModel)]="consumerAdd.bank">
-            </div>
-            <div class="field">
-                <label>Numer konta</label>
-                <input type="text" name="bankAccount" placeholder="Numer konta (niewymagane)" [(ngModel)]="consumerAdd.bankAccount">
-            </div>
-            <div class="field">
-                <label>Ulica</label>
-                <input type="text" name="street" placeholder="Ulica (niewymagane)" [(ngModel)]="consumerAdd.street">
+            <div class="field" [ngClass]="{'error': (!street.valid && (street.dirty || street.touched))}">
+                <label>Ulica *</label>
+                <input type="text" name="street" required placeholder="Ulica" [(ngModel)]="consumerAdd.street" #street="ngModel">
+                <div *ngIf="street.errors && (street.dirty || street.touched)">
+                    <small [hidden]="!street.errors.required">Ulica jest wymagana</small>
+                </div>
             </div>
             <div class="field">
                 <label>Nr budynku</label>
-                <input type="text" name="buildNumber" placeholder="Numer budynku (niewymagane)" [(ngModel)]="consumerAdd.buildNumber">
+                <input type="text" name="buildNumber" placeholder="Numer budynku" [(ngModel)]="consumerAdd.buildNumber">
             </div>
             <div class="field">
                 <label>Numer mieszkania</label>
-                <input type="text" name="apartmentNumber" placeholder="Numer mieszkania (niewymagane)" [(ngModel)]="consumerAdd.apartmentNumber">
+                <input type="text" name="apartmentNumber" placeholder="Numer mieszkania" [(ngModel)]="consumerAdd.apartmentNumber">
+            </div>
+            <div class="field" [ngClass]="{'error': (!postalCode.valid && (postalCode.dirty || postalCode.touched))}">
+                <label>Kod pocztowy *</label>
+                <input type="text" name="postalCode" pattern="[0-9]{2}\-[0-9]{3}" required placeholder="Kod pocztowy" [(ngModel)]="consumerAdd.postalCode" #postalCode="ngModel">
+                <div *ngIf="postalCode.errors && (postalCode.dirty || postalCode.touched)">
+                    <small [hidden]="!postalCode.errors.required">Kod pocztowy jest wymagany</small>
+                    <small [hidden]="!postalCode.errors.pattern">Podaj poprawny format (00-000)</small>
+                </div>
+            </div>
+            <div class="field" [ngClass]="{'error': (!place.valid && (place.dirty || place.touched))}">
+                <label>Miejscowość *</label>
+                <input type="text" name="place" placeholder="Miasto" [(ngModel)]="consumerAdd.place" required #place="ngModel">
+                <div *ngIf="place.errors && (place.dirty || place.touched)">
+                    <small [hidden]="!place.errors.required">Miejscowość jest wymagana</small>
+                </div>
             </div>
             <div class="field">
-                <label>Kod pocztowy</label>
-                <input type="text" name="postalCode" placeholder="Kod pocztowy (niewymagane)" [(ngModel)]="consumerAdd.postalCode">
+                <label>Telefon</label>
+                <input type="text" name="phone" placeholder="Telefon" [(ngModel)]="consumerAdd.phone">
+            </div>
+            <div class="field" [ngClass]="{'error': (!email.valid && (email.dirty || email.touched))}">
+                <label>Email</label>
+                <input type="text" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="Email" [(ngModel)]="consumerAdd.email" #email="ngModel">
+                <div *ngIf="email.errors && (email.dirty || email.touched)">
+                    <small [hidden]="!email.errors.pattern">Podaj poprawny format adresu email</small>
+                </div>
             </div>
             <div class="field">
-                <label>Miasto</label>
-                <input type="text" name="place" placeholder="Miasto (niewymagane)" [(ngModel)]="consumerAdd.place">
+                <label>WWW</label>
+                <input type="text" name="www" placeholder="WWW" [(ngModel)]="consumerAdd.www">
             </div>
-            <div class="ui  green labeled icon button" (click)="create()">
+            <div class="field">
+                <label>Bank</label>
+                <input type="text" name="bank" placeholder="Bank" [(ngModel)]="consumerAdd.bank">
+            </div>
+            <div class="field" [ngClass]="{'error': (!bankAccount.valid && (bankAccount.dirty || bankAccount.touched))}">
+                <label>Numer konta</label>
+                <div class="ui labeled input">
+                    <div class="ui label">
+                        PL
+                    </div>
+                    <input type="text" name="bankAccount" pattern="[0-9]{26}" placeholder="Numer konta" [(ngModel)]="consumerAdd.bankAccount" #bankAccount="ngModel">
+                </div>
+                <div *ngIf="bankAccount.errors && (bankAccount.dirty || bankAccount.touched)">
+                    <small [hidden]="!bankAccount.errors.pattern">Podaj poprawny numer konta</small>
+                </div>
+            </div>
+            <button class="ui  green labeled icon button" (click)="create()" [disabled]="!consumerForm.form.valid">
                 <i class="user icon"></i> Dodaj
-            </div>
+            </button>
         </form>
     </div>
 </div>
