--- a/application/src/app/components/orders/order.document.component.html
+++ b/application/src/app/components/orders/order.document.component.html
@@ -2,7 +2,7 @@
     <div class="ui active inverted dimmer" *ngIf="loading">
         <div class="ui text indeterminate loader">Tworzenie dokumentu</div>
     </div>
-    <form class="ui form">
+    <form class="ui form" #orderDocumentForm="ngForm">
         <div class="ui relaxed grid">
             <div class="three column row">
                 <div class="column">
@@ -23,27 +23,36 @@
                             </div>
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': (!date.valid && (date.dirty || date.touched))}">
                         <label>Data wystawienia *</label>
                         <div class="field">
-                            <input type="date" name="date" [ngModel]="document.date | date:'y-MM-dd'" (ngModelChange)="document.date = $event">
+                            <input type="date" name="date" [ngModel]="document.date | date:'y-MM-dd'" (ngModelChange)="document.date = $event" required #date="ngModel">
+                            <div *ngIf="date.errors && (date.dirty || date.touched)">
+                                <small [hidden]="!date.errors.required">Data jest wymagana</small>
+                            </div>
                         </div>
                     </div>
-                    <div class="field">
-                        <label>Domyślna stawka VAT</label>
+                    <div class="field" [ngClass]="{'error': (!vat.valid && (vat.dirty || vat.touched))}">
+                        <label>Domyślna stawka VAT *</label>
                         <div class="field">
                             <div class="ui right labeled input">
-                                <input type="text" name="vat" placeholder="VAT" [(ngModel)]="document.vat">
+                                <input type="number" name="vat" placeholder="VAT" [(ngModel)]="document.vat" required #vat="ngModel">
                                 <div class="ui basic label">
                                     %
                                 </div>
                             </div>
+                            <div *ngIf="vat.errors && (vat.dirty || vat.touched)">
+                                <small [hidden]="!vat.errors.required">Stawka VAT jest wymagana</small>
+                            </div>
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': (!place.valid && (place.dirty || place.touched))}">
                         <label>Miejsce *</label>
                         <div class="field">
-                            <input type="text" name="place" placeholder="Miejsce" [(ngModel)]="document.place">
+                            <input type="text" name="place" placeholder="Miejsce" [(ngModel)]="document.place" required #place="ngModel">
+                            <div *ngIf="place.errors && (place.dirty || place.touched)">
+                                <small [hidden]="!place.errors.required">Miejsce jest wymagane</small>
+                            </div>
                         </div>
                     </div>
                     <div class="field">
@@ -51,12 +60,15 @@
                         <textarea [(ngModel)]="document.notes" name="notes" rows="2"></textarea>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column" [ngClass]="{'error': (!dateOfPayment.valid && (dateOfPayment.dirty || dateOfPayment.touched))}">
                     <h4 class="ui dividing header">Płatność</h4>
                     <div class="field">
                         <label>Data płatności *</label>
                         <div class="field">
-                            <input type="date" name="dateOfPayment" [ngModel]="document.dateOfPayment  | date:'y-MM-dd'" (ngModelChange)="document.dateOfPayment  = $event">
+                            <input type="date" name="dateOfPayment" [ngModel]="document.dateOfPayment  | date:'y-MM-dd'" (ngModelChange)="document.dateOfPayment  = $event" required #dateOfPayment="ngModel">
+                            <div *ngIf="dateOfPayment.errors && (dateOfPayment.dirty || dateOfPayment.touched)">
+                                <small [hidden]="!dateOfPayment.errors.required">Data płatności jest wymagana</small>
+                            </div>
                         </div>
                     </div>
                     <div class="field">
@@ -84,14 +96,17 @@
                             <input type="text" name="bank" placeholder="Bank" [(ngModel)]="document.bank">
                         </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': bankAccount.errors && (bankAccount.dirty || bankAccount.touched)}">
                         <label>Numer konta</label>
                         <div class="field">
                             <div class="ui labeled input">
                                 <div class="ui label">
                                     PL
                                 </div>
-                                <input type="text" name="bankAccount" placeholder="Numer konta" [(ngModel)]="document.bankAccount">
+                                <input type="text" name="bankAccount" pattern="^\d{26}" placeholder="Numer konta" [(ngModel)]="document.bankAccount" #bankAccount="ngModel">
+                            </div>
+                            <div *ngIf="bankAccount.errors && (bankAccount.dirty || bankAccount.touched)">
+                                <small [hidden]="!bankAccount.errors.pattern">Podaj poprawny numer konta (26 cyfr)</small>
                             </div>
                         </div>
                     </div>
@@ -113,7 +128,10 @@
         </div>
     </form>
     <br>
-    <div class="ui  green labeled icon button" (click)="add()">
+    <button class="ui  green labeled icon button" (click)="add()" [disabled]="!orderDocumentForm.form.valid || !consumerId || !document.type || !document.paymentMethod">
         <i class="plus icon"></i> Dodaj
-    </div>
+    </button>
+    <br>
+    <br>
+    <small>* Pola oznaczone gwiazdką, są wymagane</small>
 </div>
