--- a/application/src/app/components/orders/orders.add.component.html
+++ b/application/src/app/components/orders/orders.add.component.html
@@ -1,17 +1,23 @@
 <div class="ui segment" style="max-height: 100%;">
-    <form class="ui form">
+    <form class="ui form" #orderAddForm="ngForm">
         <div class="ui relaxed grid">
             <div class="three column row">
                 <div class="column">
                     <h4 class="ui dividing header">Dane zlecenia</h4>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': (!date.valid && (date.dirty || date.touched))}">
                         <label>Data rozpoczęcia *</label>
-                        <input type="date" name="date" [ngModel]="orderInput.date | date:'y-MM-dd'" (ngModelChange)="orderInput.date = $event">
+                        <input type="date" name="date" [ngModel]="orderInput.date | date:'y-MM-dd'" (ngModelChange)="orderInput.date = $event" required #date="ngModel">
+                        <div *ngIf="date.errors && (date.dirty || date.touched)">
+                            <small [hidden]="!date.errors.required">Data jest wymagana</small>
+                        </div>
                     </div>
-                    <div class="field">
+                    <div class="field" [ngClass]="{'error': (!term.valid && (term.dirty || term.touched))}">
                         <label>Termin zlecenia *</label>
                         <div class="field">
-                            <input type="date" name="term" [ngModel]="orderInput.term | date:'y-MM-dd'"  (ngModelChange)="orderInput.term = $event">
+                            <input type="date" name="term" [ngModel]="orderInput.term | date:'y-MM-dd'" (ngModelChange)="orderInput.term = $event" required #term="ngModel">
+                            <div *ngIf="term.errors && (term.dirty || term.touched)">
+                                <small [hidden]="!term.errors.required">Termin jest wymagany</small>
+                            </div>
                         </div>
                     </div>
                     <div class="field">
@@ -119,7 +125,10 @@
         </div>
     </form>
     <br>
-    <div class="ui green labeled icon button" (click)="add()">
+    <button class="ui green labeled icon button" (click)="add()" [disabled]="!orderAddForm.form.valid || !consumerId || !vehicleId">
         <i class="plus icon"></i> Dodaj
-    </div>
+    </button>
+    <br>
+    <br>
+    <small>* Pola oznaczone gwiazdką, są wymagane</small>
 </div>
