--- a/application/src/app/components/vehicles/vehicle.component.html
+++ b/application/src/app/components/vehicles/vehicle.component.html
@@ -16,41 +16,43 @@
             </ng-container>
             <ng-container *ngIf="editMode">
                 <b style="font-size:1.07142857rem;">Edycja pojazdu</b>
-                <div class="ui right floated icon button mini" (click)="editMode = false"><i class="remove icon"></i></div>
-                <form class="ui form">
-                    <div class="field">
-                        <label>Marka</label>
-                        <div class="field">
-                            <input type="text" name="mark" placeholder="Marka" [(ngModel)]="vehicleInput.mark">
+                <!-- <div class="ui right floated icon button mini" (click)="editMode = false"><i class="remove icon"></i></div> -->
+                <form class="ui form" #vehicleEditForm="ngForm">
+                    <div class="field" [ngClass]="{'error': (!mark.valid && (mark.dirty || mark.touched))}">
+                        <label>Marka *</label>
+                        <input type="text" name="mark" placeholder="Marka" [(ngModel)]="vehicleInput.mark" required #mark="ngModel">
+                        <div *ngIf="mark.errors && (mark.dirty || mark.touched)">
+                            <small [hidden]="!mark.errors.required">Marka jest wymagana</small>
                         </div>
                     </div>
-                    <div class="field">
-                        <label>Model</label>
-                        <div class="field">
-                            <input type="text" name="model" placeholder="Model" [(ngModel)]="vehicleInput.model">
+                    <div class="field" [ngClass]="{'error': (!model.valid && (model.dirty || model.touched))}">
+                        <label>Model *</label>
+                        <input type="text" name="model" placeholder="Model" [(ngModel)]="vehicleInput.model" required #model="ngModel">
+                        <div *ngIf="model.errors && (model.dirty || model.touched)">
+                            <small [hidden]="!model.errors.required">Model jest wymagany</small>
                         </div>
                     </div>
                     <div class="field">
                         <label>Silnik</label>
-                        <div class="field">
-                            <input type="text" name="engine" placeholder="Tym, pojemność" [(ngModel)]="vehicleInput.engine">
-                        </div>
+                        <input type="text" name="engine" placeholder="Tym, pojemność" [(ngModel)]="vehicleInput.engine">
                     </div>
-                    <div class="field">
-                        <label>Numer rejestracyjny</label>
-                        <div class="field">
-                            <input type="text" name="registrationNumber" placeholder="Numer rejestracyjny" [(ngModel)]="vehicleInput.registrationNumber">
+                    <div class="field" [ngClass]="{'error': (!registrationNumber.valid && (registrationNumber.dirty || registrationNumber.touched))}">
+                        <label>Numer rejestracyjny *</label>
+                        <input type="text" name="registrationNumber" placeholder="Numer rejestracyjny" [(ngModel)]="vehicleInput.registrationNumber" required #registrationNumber="ngModel">
+                        <div *ngIf="registrationNumber.errors && (registrationNumber.dirty || registrationNumber.touched)">
+                            <small [hidden]="!registrationNumber.errors.required">Numer rejestracyjny jest wymagany</small>
                         </div>
                     </div>
                     <div class="field">
                         <label>Notatki</label>
-                        <div class="field">
-                            <textarea name="notes" placeholder="Notatki" rows="2" [(ngModel)]="vehicleInput.notes"></textarea>
-                        </div>
+                        <textarea name="notes" placeholder="Notatki" rows="2" [(ngModel)]="vehicleInput.notes"></textarea>
                     </div>
-                    <div class="ui  green labeled icon button tiny" (click)="save()">
+                    <button class="ui  green labeled icon button tiny" (click)="save()" [disabled]="!vehicleEditForm.form.valid">
                         <i class="save icon"></i> Zapisz
-                    </div>
+                    </button>
+                    <br>
+                    <br>
+                    <small>* Pola oznaczone gwiazdką, są wymagane</small>
                 </form>
             </ng-container>
         </div>
