--- a/application/src/app/components/stores/stores.component.html
+++ b/application/src/app/components/stores/stores.component.html
@@ -42,7 +42,7 @@
         </tr>
     </thead>
     <tbody *ngIf="isReturn()">
-        <tr *ngFor="let store of stores; let key = index">
+        <tr *ngFor="let store of singlePageStores; let key = index">
             <ng-container *ngIf="!isEdited(store.id)">
                 <td class="collapsing">
                     <div class="ui fitted checkbox">
@@ -84,7 +84,7 @@
                 </td>
                 <td>
                     <div class="ui input">
-                        <input type="text" name="netto" [(ngModel)]="inputStore.netto" (blur)="nettoBlur()">
+                        <input type="text" name="netto" class="price-input" [(ngModel)]="inputStore.netto" (blur)="nettoBlur()">
                     </div>
                 </td>
                 <td>
@@ -97,16 +97,16 @@
                 </td>
                 <td>
                     <div class="ui input">
-                        <input type="text" name="vatSum" [(ngModel)]="inputStore.vatSum" (blur)="vatSumBlur()">
+                        <input type="text" name="vatSum" class="price-input" [(ngModel)]="inputStore.vatSum" (blur)="vatSumBlur()">
                     </div>
                 </td>
                 <td>
                     <div class="ui input">
-                        <input type="text" name="brutto" [(ngModel)]="inputStore.brutto" (blur)="bruttoBlur()">
+                        <input type="text" name="brutto" class="price-input" [(ngModel)]="inputStore.brutto" (blur)="bruttoBlur()">
                     </div>
                 </td>
                 <td>
-                    <div class="ui  green icon button mini" (click)="update(store.id)"><i class="checkmark icon"></i></div>
+                    <button class="ui  green icon button mini" (click)="update(store.id)" [disabled]="!inputStore.name || !inputStore.unit"><i class="checkmark icon"></i></button>
                     <div class="ui  red icon button mini" (click)="hideEdit()"><i class="remove icon"></i></div>
                 </td>
             </ng-container>
@@ -142,7 +142,7 @@
             </td>
             <td>
                 <div class="ui input">
-                    <input type="text" name="netto" [(ngModel)]="inputStore.netto" (blur)="nettoBlur()">
+                    <input type="text" name="netto" class="price-input" [(ngModel)]="inputStore.netto" (blur)="nettoBlur()">
                 </div>
             </td>
             <td>
@@ -155,16 +155,16 @@
             </td>
             <td>
                 <div class="ui input">
-                    <input type="text" name="vatSum" [(ngModel)]="inputStore.vatSum" (blur)="vatSumBlur()">
+                    <input type="text" name="vatSum" class="price-input" [(ngModel)]="inputStore.vatSum" (blur)="vatSumBlur()">
                 </div>
             </td>
             <td>
                 <div class="ui input">
-                    <input type="text" name="brutto" [(ngModel)]="inputStore.brutto" (blur)="bruttoBlur()">
+                    <input type="text" name="brutto" class="price-input" [(ngModel)]="inputStore.brutto" (blur)="bruttoBlur()">
                 </div>
             </td>
             <td>
-                <div class="ui  green icon button mini" (click)="addNewStore()"><i class="checkmark icon"></i></div>
+                <button class="ui  green icon button mini" (click)="addNewStore()"  [disabled]="!inputStore.name || !inputStore.unit"><i class="checkmark icon"></i></button>
                 <div class="ui  red icon button mini" (click)="showAdd = false"><i class="remove icon"></i></div>
             </td>
         </tr>
@@ -199,3 +199,6 @@
 <div class="ui green labeled icon button" (click)="add()">
     <i class="add icon"></i> Nowa pozycja
 </div>
+<br>
+<br>
+<small>* Wszystkie pola są wymagane</small>
